# seek

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  main.rs  terminal.rs
