[package]
name = "seek-finder"
description = "No-nonsense grep-like tool."
keywords = ["grep", "search", "cli"]
authors = ["Konstantin Zhigaylo <zero@kostyazero.com>"]
repository = "https://github.com/kostya-zero/seek"
homepage = "https://github.com/kostya-zero/seek"
readme = "README.md"
license = "MIT"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "seek"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
